--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -1,3 +1,14 @@
-.body {
-	
-}
+@import "settings";
+@import "../../node_modules/bullets-sass/scss/style";
+
+@include bullets-grid;
+@include bullets-type;
+@include bullets-table;
+@include bullets-links;
+@include bullets-button;
+@include bullets-forms;
+@include bullets-image;
+@include bullets-embed;
+@include bullets-wordpress;
+
+@import "main";
