--- a/layouts/single.html
+++ b/layouts/single.html
@@ -4,6 +4,7 @@
     <title>{{ .Title }}</title>
     <meta charset="UTF-8">
     <meta name="description" content="{{ .Description }}">
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
     <main>
