fix bullets and gulp issues

--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -1,5 +1,6 @@
 @import "settings";
 @import "../../node_modules/bullets-sass/scss/style";
+@import "fonts";
 
 @include bullets-grid;
 @include bullets-type;
