--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,6 +10,7 @@
                             {{ .Title }}
                         </a>
                     </h1>
+                    <img src="{{ .Image }}">
                     {{ .Summary }}
                     <a href="{{ .Permalink }}">
                         Read the full article
