--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,7 +3,8 @@
 <head>
     <title>{{ .Title }}</title>
     <meta charset="UTF-8">
+    <base href="{{ .Site.BaseURL }}">
     <meta name="description" content="{{ .Description }}">
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/styles.css" />
 </head>
 <body>
