--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,7 +10,8 @@
                             {{ .Title }}
                         </a>
                     </h1>
-                    <img src="{{ .Image }}">
+                    <img src="">
+                    {{ .Data.Image }}
                     {{ .Summary }}
                     <a href="{{ .Permalink }}">
                         Read the full article
