--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,12 +6,13 @@
             <div class="column column-m-12 column-t-8">
                 <article>
                     <h1>
+                    {{ if .Params.image }}<img src="{{ .Params.image }}" alt="{{ .Title }}" />{{ end }}
                         <a href="{{ .Permalink }}">
                             {{ .Title }}
                         </a>
                     </h1>
                     <img src="">
-                    {{ .Data.Image }}
+
                     {{ .Summary }}
                     <a href="{{ .Permalink }}">
                         Read the full article
