--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,8 +3,8 @@
 <head>
     <title>{{ .Title }}</title>
     <meta charset="UTF-8">
-    <base href="{{ .Site.BaseURL }}">
+    <!-- <base href="{{ .Site.BaseURL }}"> -->
     <meta name="description" content="{{ .Description }}">
-    <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
