--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,8 +3,10 @@
 <head>
     <title>{{ .Title }}</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <!-- <base href="{{ .Site.BaseURL }}"> -->
     <meta name="description" content="{{ .Description }}">
+    <link href="https://fonts.googleapis.com/css?family=Maven+Pro:400,500,700,900" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
