--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -2,14 +2,14 @@
 @import "../../node_modules/bullets-sass/scss/style";
 @import "fonts";
 
-@include bullets-grid;
+// @include bullets-grid;
 @include bullets-type;
-@include bullets-table;
+// @include bullets-table;
 @include bullets-links;
 @include bullets-button;
 @include bullets-forms;
 @include bullets-image;
 @include bullets-embed;
-@include bullets-wordpress;
+// @include bullets-wordpress;
 
 @import "main";
