--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,6 +7,6 @@
     <!-- <base href="{{ .Site.BaseURL }}"> -->
     <meta name="description" content="{{ .Description }}">
     <link href="https://fonts.googleapis.com/css?family=Maven+Pro:400,500,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="{{ .Site.BaseURL }}css/styles.css" />
 </head>
 <body>
