footer and consistent article styles

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,7 @@
 
     <header class="hero">
 
-        <h1>I am a...</h1>
+        <h1>Michael Gunner</h1>
         <h3>Frontend<br>developer</h3>
 
     </header>
@@ -52,9 +52,6 @@
         {{ end }}
     </main>
 
-    <footer>
-        <p>Copyright Michael Gunner &copy;2017.</p>
-    </footer>
 
 </div>
 {{ partial "footer.html" . }}
