--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -1,4 +1,8 @@
 {{ partial "header.html" . }}
+<header class="pageheader">
+    <h4>Michael Gunner</h4>
+    <a href="{{ .Site.BaseURL }}" class="button button--small button--secondary">go home</a>
+</header>
 <div class="wrap">
 	<labeL>Dark/Light</label>
 	<input type="checkbox" id="theme" name="theme">
