--- a/layouts/single.html
+++ b/layouts/single.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
+    <header>
+        <h4>Michael Gunner</h4>
+        <a href="">go home</a>
+    </header>
     <main>
         <article>
             <h1>{{ .Title }}</h1>
