--- a/assets/styles/_main.scss
+++ b/assets/styles/_main.scss
@@ -3,23 +3,22 @@ h6 {
 	letter-spacing: 10px;	
 }
 
+.home {
+	background: url('../images/bg.jpg'), $primary;
+	background-size: 100%;
+	background-attachment: fixed;
+	background-blend-mode: color-dodge;	
+}
 
 .hero {
-	position: fixed;
-	z-index: -1;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	flex-wrap: wrap;
 
-	top: 0;
 	width: 100%;
 	min-height: 105vh;
 	padding: $global-padding;
-
-	background: url('../images/bg.jpg'), $primary;
-	background-size: cover;
-	background-blend-mode: color-dodge;
 
 	color: $white;
 	text-align: center;
@@ -30,7 +29,7 @@ h6 {
 		top: 0;
 		left: 0;
 		width: 100%;
-		height: 100%;
+		height: 105vh;
 		background: rgba($primary, 0.8);
 		z-index: 2;
 	}
@@ -53,14 +52,55 @@ h6 {
 		-webkit-text-fill-color: transparent;
 
 		word-wrap: break-word;
+
+		@include breakpoint(desktop){
+			font-size: rem-calc(90);
+		}
 	}
 
 	h1 {
 		flex: 0 0 100%;
-		font-weight: 400;
+		font-weight: 500;
+		text-transform: uppercase;
+		letter-spacing: 12px;		
 		color: $white;
 		margin: rem-calc(-20 0 10);
 	}	
+}
+
+.pageheader {
+	background: $primary;
+	position: relative;
+	z-index: 6;
+	padding: rem-calc(12) $global-padding;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+
+	&::after {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 105vh;
+		background: rgba($primary, 0.8);
+		z-index: 2;
+	}
+
+	h4, a {
+		position: relative;
+		z-index: 3;
+	}
+
+	h4 {
+		font-size: rem-calc(18);
+		font-weight: 500;
+		text-transform: uppercase;
+		letter-spacing: 6px;		
+		color: $white;
+	}	
+
 }
 
 .intro {
@@ -76,7 +116,6 @@ h6 {
 	@include breakpoint(tablet){
 		padding: $global-padding*3;
 	}
-	margin-top: 100vh;
 	text-align: center;
 	min-height: 65vh;
 
@@ -99,7 +138,10 @@ h6 {
 }
 
 .articlegroup {
-	background: rgba($black, 0.55);
+	background: url('../images/bg2.jpg'), linear-gradient(20deg, darken($primary, 5%) 0%, darken($primary, 10%) 80%);
+	background-size: 100%;
+	background-attachment: fixed;
+	background-blend-mode: soft-light;	
 
 	h6 {
 		background: darken($primary, 10%);
@@ -118,12 +160,21 @@ h6 {
 	@include breakpoint(tablet){
 		display: grid;
 		grid-template-columns:1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+		grid-template-rows: rem-calc(200) 1fr 1fr;
 	}
 }
 
 .article {
-	background: $light-gray;
+	background: linear-gradient(20deg, darken($primary, 5%) 0%, darken($primary, 10%) 80%);
 	padding: $global-padding;
+
+	h2, h2 a {
+		color: $green;
+	}
+
+	p, a {
+		color: $white;
+	}
 
 	h2, p {
 		margin-bottom: 0.8em;
@@ -140,25 +191,8 @@ h6 {
 	@include breakpoint(tablet){
 		display: flex;
 		align-items: center;
-	}
-}
-
-.article:first-of-type {
-	background: linear-gradient(20deg, darken($primary, 5%) 0%, darken($primary, 10%) 80%);
-
-	h2, h2 a {
-		color: $green;
-	}
-
-	p, a {
-		color: $white;
-	}
-
-	@include breakpoint(tablet){
-		grid-column: 1/6;
-		grid-row: 2;
 		width: 100%;
-		margin: rem-calc(250 80 50);
+		margin: rem-calc(100 0);
 		padding: rem-calc(50);
 		transform: skew(-10deg);
 		transition: border-radius 0.2s ease;
@@ -168,41 +202,36 @@ h6 {
 			transform: skew(10deg);
 		}
 	}
+}
+
+.article:first-of-type {
+	@include breakpoint(tablet){
+		grid-column: 1/6;
+		grid-row: 2;
+		margin-bottom: 0;
+	}
 
 	@include breakpoint(desktop){
 		grid-column: 3/6;
-		grid-row: 1;
 	}
 }
 
 .article:last-of-type {
-	background: linear-gradient(15deg, desaturate($red, 5%) 0%, darken($purple, 5%) 80%);
-
-	h2 a {
-		color: $white;
-	}
-
-	p {
-		color: rgba($white, 0.85);
-	}
-
 	@include breakpoint(tablet){
-		grid-column: 2/8;
-		margin: rem-calc(100 100 200);
-		padding: rem-calc(70);
+		grid-column: 1/6;
 	}
 
 	@include breakpoint(desktop){
-		grid-column: 4/8;
-		text-align: center;
-		padding: rem-calc(70 90);
+		grid-column: 3/6;
 	}
 }
 
 .wrap {
-	background: linear-gradient(40deg, $red 0%, $purple 80%);
+	position: relative;
+	z-index: 77;
+	background: $primary;
 	color: $white;
-	padding: rem-calc(40 0);
+	padding: rem-calc(40 0 0);
 }
 
 .wrap label {
@@ -230,7 +259,7 @@ h6 {
 		top: rem-calc(0);
 		bottom: rem-calc(0);
 		left: rem-calc(0);
-		background: $primary;
+		background: $secondary;
 		transition: 0.1s ease;
 	}
 }
@@ -254,6 +283,7 @@ h6 {
 .page {
 	background: linear-gradient(20deg, $primary 0%, darken($primary, 10%) 80%);
 	padding: $global-padding;
+	min-height: 100vh;
 }
 
 
@@ -282,8 +312,8 @@ h6 {
 	border: 2px solid $primary;
 
 	&:hover {
-		// transform: skew(-15deg);
-		letter-spacing: 5px;
+		color: $secondary;
+		background: $primary;
 	}
 }
 
@@ -292,8 +322,13 @@ h6 {
 	border-color: $secondary;
 
 	&:hover {
-		color: $secondary;
+		color: $primary;
+		background: $secondary;
 	}
+}
+
+.button--small {
+	padding: rem-calc(10 35);
 }
 
 .readmore {
@@ -312,12 +347,25 @@ h6 {
 
 footer {
 	text-align: center;
-	padding: $global-padding;
+	padding: $global-padding*2 $global-padding;
 	background: $primary;
+
+	background: linear-gradient(20deg, $red 0%, $purple 80%);
 
 	p {
 		margin:0;
 		font-weight: 900;
-		color: darken($primary, 20%);
+		color: darken($primary, 10%);
+	}
+
+	p a {
+		color: $primary;
+		margin: rem-calc(5 15);
+		text-decoration: none;
+		border-bottom: 2px solid rgba($primary, 0.1);
+
+		&:hover {
+			border-bottom: 2px solid $primary;
+		}
 	}
 }
