--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,7 +4,7 @@
     <title>{{ .Title }}</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <!-- <base href="{{ .Site.BaseURL }}"> -->
+    <base href="{{ .Site.BaseURL }}">
     <meta name="description" content="{{ .Description }}">
     <link href="https://fonts.googleapis.com/css?family=Maven+Pro:400,500,700,900" rel="stylesheet">
     <link rel="stylesheet" href="{{ .Site.BaseURL }}css/styles.css" />
