--- a/assets/styles/_main.scss
+++ b/assets/styles/_main.scss
@@ -38,8 +38,14 @@ h6 {
 		left: 0;
 		width: 100%;
 		height: 105vh;
-		background: rgba($primary, 0.8);
+		background: rgba($primary, 0.2);
 		z-index: 2;
+
+		background-image: url('../images/pattern.png');
+		background-size: 450px;
+		background-repeat: repeat;
+		background-attachment: fixed;
+		opacity: 0.95;		
 	}
 
 	h3, h1 {
