--- a/layouts/post.html
+++ b/layouts/post.html
@@ -2,6 +2,7 @@
     <main>
         <article>
             <h1>{{ .Title }}</h1>
+            {{ if .Params.image }}<img src="{{ .Params.image }}" alt="{{ .Title }}" />{{ end }}
             {{ .Content }}
         </article>
     </main>
