--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,17 +10,18 @@
 
     <aside class="intro">
         <h4>In goes code. Out goes website.</h4>
-        <p>I work for a small agency in Brighton, building websites, pattern libraries and other digital products. I believe in a fast loading, easy to use and enjoyable end result. Accessiblity, flexibility and well written code are also important beliefs.</p>
+        <p>I work for a small agency in Brighton, building websites, pattern libraries and other digital products. I believe in a fast loading, easy to use and enjoyable end result. Accessiblity, flexibility and well written code are also important principles.</p>
         <a class="button button--secondary" target="_blank" rel="noopener" href="https://www.youtube.com/watch?v=hY7m5jjJ9mM">click for cats</a>
 
     </aside>
 
     <main class="articlegroup">
         <h6>Writings</h6>
-        {{ range first 2 .Data.Pages }}
+        {{ range first 4 .Data.Pages }}
         {{ if eq .Type "posts" }}
                 <article class="article">
                     <div class="article__inner">
+                        <h3 class="meta">{{ .Date.Format "Mon, Jan 2, 2006" }}</h3>
                         <h2>
                         <!-- {{ if .Params.image }}<img src="{{ .Params.image }}" alt="{{ .Title }}" />{{ end }} -->
                             <a href="{{ .Permalink }}">
