--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -1,7 +1,6 @@
 {{ partial "header.html" . }}
 <header class="pageheader">
-    <h4>Michael Gunner</h4>
-    <a href="{{ .Site.BaseURL }}" class="button button--small button--secondary">go home</a>
+    <h4><a href="{{ .Site.BaseURL }}">Michael Gunner</a></h4>
 </header>
 <div class="wrap">
 	<labeL>Dark/Light</label>
@@ -9,6 +8,7 @@
 
     <main class="page">
         <article class="page__article">
+            <h3 class="meta">{{ .Date.Format "Mon, Jan 2, 2006" }}</h3>
             <h1>{{ .Title }}</h1>
             {{ if .Params.image }}<img src="{{ .Params.image }}" alt="{{ .Title }}" />{{ end }}
             {{ .Content }}
